--- a/app/design/frontend/foundation/default/template/catalog/category/view.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/category/view.phtml
@@ -45,11 +45,11 @@ if ($_imgUrl = $_category->getImageUrl()) {
         <a href="<?php echo $this->getRssLink() ?>"
            class="link-rss"><?php echo $this->__('Subscribe to RSS Feed') ?></a>
     <?php endif; ?>
-    <?php //if ($additionalheadline = $_category->getAdditionalHeadline()): ?>
+    <?php if ($additionalheadline = $_category->getAdditionalHeadline()): ?>
         <h1><?php echo $this->helper('cms')->getBlockTemplateProcessor()->filter($this->helper('catalog/output')->categoryAttribute($_category, $_category->getAdditionalHeadline(), 'additional_headline')) ?></h1>
-    <?php //else: ?>
+    <?php else: ?>
         <h1><?php echo $_helper->categoryAttribute($_category, $_category->getName(), 'name') ?></h1>
-    <?php //endif; ?>
+    <?php endif; ?>
 </div>
 
 <?php if ($additionaldescription = $_category->getAdditionalDescription()): ?>
