--- a/app/design/frontend/foundation/default/template/catalog/product/view/addto.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/view/addto.phtml
@@ -42,7 +42,7 @@
     </li>
 <?php endif; ?>
 <?php
-$_compareUrl = $this->helper('catalog/product_compare')->getAddUrl($_product);
+//$_compareUrl = $this->helper('catalog/product_compare')->getAddUrl($_product);
 ?>
 <?php if ($_compareUrl) : ?>
     <li class="bullet-item"><span class="separator">|</span> <a href="<?php echo $_compareUrl ?>"
