--- a/app/design/frontend/foundation/default/layout/local.xml
+++ b/app/design/frontend/foundation/default/layout/local.xml
@@ -65,26 +65,28 @@
         <remove name="cart_sidebar"/>                   <!--Cart Sidebar-->
         <remove name="catalog.product.related"/>        <!--Related products sidebar-->
         <remove name="wishlist_sidebar"/>               <!--Wishlist Sidebar-->
-        <remove name="catalog.compare.sidebar"/>        <!--Compare Items Sidebar-->
         <remove name="right.permanent.callout"/>        <!--Right Callout Sample Data-->
         <remove name="left.permanent.callout"/>         <!--Left Callout Sample Data-->
+        <remove name="left.reports.product.viewed"/>
         <remove name="right.reports.product.viewed"/>   <!--Viewed Products-->
         <remove name="right.reports.product.compared"/> <!--Compared Products-->
+        <remove name="right.reports.onlyproduct.viewed"/>
         <remove name="left.newsletter"/>                <!--Sidebar Newsletter-->
         <remove name="right.poll"/>                     <!--Poll-->
         <remove name="tags_popular"/>                   <!--Popular Tags-->
         <remove name="product_tag_list"/>
         <remove name="paypal.partner.right.logo"/>      <!--Paypal logo Sample Data-->
         <remove name="sale.reorder.sidebar"/>           <!--Reorder Sidebar When User Logged, in Dashboard-->
-        <!--<remove name="customer_account_navigation"/>    Customer Navigation-->
         <remove name="currency"/>
-        <!--<remove name="catalog.leftnav"/>-->
-        <!--<remove name="breadcrumbs"/>-->
 
         <!-- remove the language and store switcher and footer links blocks, we won't use them -->
         <remove name="store_language"/>
         <remove name="footer_links"/>
         <remove name="newsletter.unsubscriber"/>
+
+        <reference name="right">
+            <remove name="right.reports.product.viewed"/>
+        </reference>
 
         <!-- Add/Remove Top Links -->
         <reference name="root">
@@ -205,6 +207,7 @@
                 <template>page/1column.phtml</template>
             </action>
         </reference>
+        <remove name="right.reports.product.viewed" />
         <remove name="product.clone_prices"/>
         <reference name="product.info">
             <action method="unsetChild">
@@ -427,7 +430,7 @@
                     <label><![CDATA[<i class="fa fa-power-off"></i>]]> Log Out</label>
                 </action>
             </block>
-            <remove name="catalog.compare.sidebar"/>
+            <!--remove name="catalog.compare.sidebar"/>-->
         </reference>
     </customer_account>
 
@@ -497,5 +500,12 @@
     <cms_index_noroute>
         <remove name="google_analytics"/>
     </cms_index_noroute>
+
+    <catalog_product_compare_index translate="label">
+        <reference name="root">
+            <action method="setTemplate"><template>page/compare.phtml</template></action>
+        </reference>
+        <remove name="head" />
+    </catalog_product_compare_index>
 
 </layout>
