--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -191,17 +191,14 @@
         <div class="social">
             <ul>
                 <li><a href="https://facebook.com/gastrodax/" target="_blank" rel="nofollow noopener noreferrer"><i
-                                class="fa fa-facebook-square"
-                                aria-hidden="true"></i></a></li>
+                                class="fab fa-facebook-square"></i></a></li>
                 <li><a href="https://plus.google.com/+gastrodax" target="_blank" rel="nofollow noopener noreferrer"><i
-                                class="fa fa-google-plus-square"
-                                aria-hidden="true"></i></a></li>
+                                class="fab fa-google-plus-square"></i></a></li>
                 <li><a href="https://www.youtube.com/channel/UCTr6z7_W4adeggGR1Sa717g" target="_blank"
                        rel="nofollow noopener noreferrer"><i
-                                class="fa fa-youtube-square" aria-hidden="true"></i></a></li>
+                                class="fab fa-youtube-square"></i></a></li>
                 <li><a href="https://twitter.com/gastrodax" target="_blank" rel="nofollow noopener noreferrer"><i
-                                class="fa fa-twitter-square"
-                                aria-hidden="true"></i></a></li>
+                                class="fab fa-twitter-square"></i></a></li>
             </ul>
         </div>
         <div class="copyright">
