--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -395,7 +395,7 @@
       a {
         font-size: 0;
         &:before {
-          font-family: FontAwesome;
+          font-family: 'Font Awesome 5 Free';
           font-size: 20px;
         }
       }
@@ -472,7 +472,7 @@
             position: absolute;
             right: 0;
             font-size: 0;
-            font-family: FontAwesome;
+            font-family: 'Font Awesome 5 Free';
             &:before {
               font-size: 15px;
               content: "\f1f8";
