--- a/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
@@ -319,7 +319,7 @@
       color: $success-color;
       border-color: $success-color;
       &:after {
-        font-family: FontAwesome;
+        font-family: 'Font Awesome 5 Free';
         content: ' \f00c';
       }
       .price-notice .price {
