--- a/skin/frontend/foundation/default/src/assets/scss/custom/_checkout.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_checkout.scss
@@ -203,7 +203,7 @@
     input[type='radio']:checked + label, input[type='checkbox']:checked + label {
       @include button(false, $success-color, $button-background-hover, $button-color);
       &:after {
-        font-family: FontAwesome;
+        font-family: 'Font Awesome 5 Free';
         content: '\f00c';
       }
     }
